Wdrożenie edycji użytkowników
